# IvanAvila-gear-academy

contracts/: Cargo.toml
contracts/04-tamagotchi-shop/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/04-tamagotchi-shop/store/io/src/: lib.rs
contracts/04-tamagotchi-shop/store/src/: lib.rs
contracts/05-tamagotchi-auto/: Cargo.toml
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/05-tamagotchi-auto/tests/: auto.rs
contracts/07-coursework-battle/: Cargo.toml  build.rs
contracts/07-coursework-battle/battle/: Cargo.toml  build.rs
contracts/07-coursework-battle/battle/io/: Cargo.toml
contracts/07-coursework-battle/battle/io/src/: lib.rs
contracts/07-coursework-battle/battle/src/: lib.rs
contracts/07-coursework-battle/io/: Cargo.toml
contracts/07-coursework-battle/io/src/: lib.rs
contracts/07-coursework-battle/src/: lib.rs
contracts/07-coursework-battle/store/: Cargo.toml
