[package]
name = "battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
store-io.workspace = true
sharded-fungible-token-io.workspace = true
battle-io.workspace = true
coursework-battle-io.workspace = true


[build-dependencies]
gear-wasm-builder.workspace = true
store-io.workspace = true
battle-io.workspace = true
coursework-battle-io.workspace = true
